<?xml version="1.0"?>
<package format="2">
  <name>inertiallabs_ros_pkgs</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the Inertial Labs (meta package)
  </description>

  <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">http://exmaple.com</url>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>inertiallabs_msgs</exec_depend>
  <exec_depend>inertiallabs_ins</exec_depend>

  <export><metapackage/></export>
</package>
